feat: show numeric ranks with final modifier rows